# mirror-ball

./: README.md  mirror-ball.cabal  stack.yaml
data/: final.pfm  final.ppm  final_nogamma.pfm  final_nogamma.ppm  normal.pfm  normal.ppm  reflect.pfm  reflect.ppm  urbanEM_latlong.ppm
src/: Main.hs  Vec.hs
