name:                mirror-ball
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ymherklotz/mirror-ball#readme
license:             BSD3
license-file:        LICENSE
author:              Yann Herklotz Grave
maintainer:          yann [at] yannherklotzgrave [dot] com
copyright:           2019 Yann Herklotz Grave
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mirror-ball
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.8.2
                     , pfm >= 0.1.0.0
                     , text >= 1.2.3.1
